# libaspect2

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
aspect2-stm32-updater/: Cargo.toml  README.md
aspect2-stm32-updater/src/: main.rs
configs/jtag/: ft4232h_facet.cfg
emmc_spi/: Cargo.toml
emmc_spi/src/: enums.rs  error.rs  main.rs  reader.rs
i2c/: Cargo.toml
i2c/src/: i2c_bitbang.rs  i2c_bitbang2.rs  isd9160.rs  lib.rs  main.rs
mcu/picoemmc/: Cargo.toml  build.rs  tree.txt
mcu/picoemmc/src/: main.rs
postcode-emu/: Cargo.toml
postcode-emu/src/: main.rs
soundchip-cli/: Cargo.toml
soundchip-cli/src/: main.rs
src/: clock.rs  error.rs  lib.rs  no_std_prelude.rs  std_prelude.rs
src/i2c/: i2c_bitbang.rs  isd9160.rs  mod.rs
src/spi/: emmc_reader.rs  mod.rs
src/spi/backend/: eh.rs  eh0.rs  eh1.rs  ftdi.rs  mod.rs
src/spi/protocol/: commands.rs  constants.rs  mod.rs  transaction.rs
stm32flash/: Cargo.toml
stm32flash/src/: main.rs
tools/: Cargo.toml
