[package]
name = "libaspect2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "aspect2-stm32-updater",
    "tools",
    "mcu/picoemmc",
]

[dependencies]
embedded-hal = { version = "1.0.0" }
bitflags = "2.6.0"
thiserror = { version = "2.0.3", default-features = false }
hex-literal = "1.1.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
embedded-timers = "0.4.0"

[dependencies.libftd2xx]
version = "0.33.1"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]
optional = true

[features]
default = ["std"]
std = ["embedded-timers/std"]
ftdi = ["dep:libftd2xx"]
# embedded-hal = ["dep:embedded-hal"]

[package.metadata.docs.rs]
all-features = true
