[package]
name = "aspect2-stm32-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32-bootloader-client = { git = "https://github.com/xboxoneresearch/stm32-bootloader-client-rs.git", branch = "main" }
i2c = { path = "../i2c" }
indicatif = "0.18.0"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
binrw = "0.15.0"
