[package]
name = "emmc_spi"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
thiserror = "2.0.3"

[dependencies.libftd2xx]
version = "0.33.1"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]
