[package]
name = "picoemmc"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.0"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = {version = "0.3.0", features = ["defmt-03"]}
embedded-io = "0.7.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
libaspect2 = { version = "0.1.0", path = "../..", default-features = false}
nb = "1.0"
panic-halt = "0.2.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
pio = "0.3.0"
# We aren't using portable-atomic directly in the examples, but some of our dependencies (like static_cell) require atomic CAS so this is needed.
portable-atomic = {version = "1.7.0", features = ["critical-section"]}
rp2040-boot2 = "0.3.0"
rp2040-hal = {version = "0.12.0", features = ["binary-info", "critical-section-impl", "rt", "defmt", "rtic-monotonic"]}
static_cell = "2.1.0"

# For PicoClockDelay
embedded-timers = "0.4.0"

# USB-CDC support
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[lints.clippy]
too_long_first_doc_paragraph = "allow"
